--- a/index.html
+++ b/index.html
@@ -7,6 +7,149 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="navigation">
+            <a href="" class="logo">
+                WebStudio
+            </a>
+            <ul class="navigation-list">
+                <li class="navigation-item">
+                    <a href="" class="navigation-link">Студия</a>
+                </li>
+                <li class="navigation-item">
+                    <a href="" class="navigation-link">Портфолио</a>
+                </li>
+                <li class="navigation-item">
+                    <a href="" class="navigation-link">Контакты</a>
+                </li>
+            </ul>
+        </nav>
+        <ul class="contacts">
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+380961111111">+380961111111</a>
+            </li>
+        </ul>
+        </nav>
+    </header>
+    <main>
+        <section style="background-color:#2F303A; height:600px; text-align: center; vertical-align: middle;">
+            <h1 class="service">
+                <span style="color: white;">Эффективные решения<br>для вашего бизнеса</span>
+            </h1>
+            <button type="button">
+                 Заказать услугу
+            </button>
+        </section>
+        <section>
+            <ul class="service-quality"> 
+                <li>
+                    <h2>
+                        Внимание к деталям
+                    </h2>
+                    <p>
+                    Идейные соображения, а также начало повседневной работы по формированию позиции.
+                    </p>
+                </li>
+                <li class="service-quality">
+                    <h2>
+                    Пунктуальность
+                    </h2>
+                    <p>
+                    Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                    </p>
+                </li>
+                <li class="service-quality">
+                    <h2>
+                    Планирование
+                    </h2>
+                    <p>
+                    Равным образом консультация с широким активом в значительной степени обуславливает.
+                    </p>
+                </li>
+                <li class="service-quality">
+                    <h2>Современные технологии
+                    </h2>
+                    <p>
+                    Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                    </p>
+                </li>
+        </section>
+        <section>
+            <h2 class="service-details">
+                Чем мы занимаемся
+            </h2>
+            <ul>
+                <li>
+                    <img src="./pictures/work_on_tablet_and_on_pc.jpg" alt="Work on tablet and on PC" width="370" height="294">
+                </li>
+                <li>
+                    <img src="./pictures/variation_for_landing_page_on_mobile_phone.jpg" alt="Variation for landing page on mobile phone" width="370" height="294">
+                </li>
+                <li>
+                    <img src="./pictures/work_with_color_palitra_on_tablet.jpg" alt="Work with color palitra on tablet" width="370" height="294">
+                </li>
+            </ul>
+        </section>
+        <section>
+        <h2 class="team">
+            Наша команда
+        </h2>
+       <ul>
+            <li>
+                <img src="./pictures/team-card-1.jpg" alt="Team Card 1">
+                <h3 class="team-name">
+                  Игорь Демьяненко
+                </h3>
+                  <p class="team-function">Product Designer
+                  </p>    
+            </li>
+            <li>
+                <img src="./pictures/team-card-2.jpg" alt="Team Card 2">
+                <h3 class="team-name">
+                    Ольга Репина
+                </h3>
+                <p class="team-function">Frontend Developer
+                </p>
+            </li>
+            <li>
+                <img src="./pictures/team-card-3.jpg" alt="Team Card 3">
+                <h3 class="team-name">Николай Тарасов
+                </h3>
+                <p class="team-function">Marketing
+                </p>
+            </li>
+             <li>
+                <img src="./pictures/team-card-4.jpg" alt="Team Card 4">
+                <h3 class="team-name">Михаил Ермаков
+                </h3>
+                <p class="team-function">UI Designer
+                </p>
+            </li>
+       </ul>
+        </section>
+    </main>
+    <footer>
+        <p class="logo">
+                WebStudio
+        </p>
+        <ul>
+            <li>
+                <address>
+                    <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">
+                        г. Киев, пр-т Леси Украинки, 26
+                    </a>
+                </address>
+            </li>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li> 
+                <a href="tel:+380961111111">+380961111111</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
